# GPT-Voice-Assistant

./: .gitignore  .replit  README.md  kai.html  kai.js  kai.py  kai_app.py  main.py  main_gui.py  py_error_handler.py  pyproject.toml  replit.nix  requirements.txt
static/: kai.js
templates/: kai.html
